--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" class="templates:surround?with=templates/page.html&amp;at=content">
     <div class="row-fluid">
-        <div id="content" class="span8">
+        <div id="content">
             <div class="page-header">
                 <h1 class="config:app-title">Generated page</h1>
             </div>
             <div class="row-fluid">
-                <div class="app:test"/>
+                <div class="app:schema"/>
             </div>
-        </div>
-        <div class="span4">
-            <h2>Application Info</h2>
-            <div class="config:app-info"/>
         </div>
     </div>
 </div>
