--- a/item.html
+++ b/item.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <div xmlns="http://www.w3.org/1999/xhtml" class="templates:surround?with=templates/page.html&amp;at=content">
     <div class="row-fluid">
-        <div id="content" class="span8">
+        <div id="content" class="span7">
             <div class="page-header">
                 <h1 class="config:app-title">Generated page</h1>
             </div>
@@ -9,9 +9,13 @@
                 <div class="app:item-detail"/>
             </div>
         </div>
-        <div class="span4">
-            <h2>Application Info</h2>
-            <div class="config:app-info"/>
+        <div class="span5">
+            <div class="row-fluid">
+                <div class="app:svgdim"/>
+            </div>
+            <div class="row-fluid">
+                <div class="app:svg"/>
+            </div>
         </div>
     </div>
 </div>
