Updated with generated example data instances.

--- a/item.html
+++ b/item.html
@@ -11,7 +11,10 @@
         </div>
         <div class="span5">
             <div class="row-fluid">
-                <div class="app:svgdim"/>
+                <div class="well">
+                    <span class="label">Example</span>
+                    <div class="app:instance"/>
+                </div>
             </div>
             <div class="row-fluid">
                 <div class="app:svg"/>
