--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
                 <h1 class="config:app-title">Generated page</h1>
             </div>
             <div class="row-fluid">
-                <div class="app:schema"/>
+                <div class="well">
+                    <h3>Sample Schemas</h3>
+                    <p>
+                        <a href="schema.html?schema=http://greatlinkup.com:8080/exist/apps/schema/resources/schemas/test.xsd">Test</a>
+                    </p>
+                    <p>
+                        <a href="schema.html?schema=http://release.niem.gov/niem/niem-core/2.0/niem-core.xsd">NIEM Core</a>
+                    </p>
+                    <p>
+                        <a href="schema.html?schema=http://www.w3.org/2001/XMLSchema.xsd">XML Schema</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
