Updating for intense generation.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                         <a href="schema.html?schema=http://release.niem.gov/niem/niem-core/2.0/niem-core.xsd">NIEM Core</a>
                     </p>
                     <p>
+                        <a href="schema.html?schema=http://www.docbook.org/xml/5.0/xsd/docbook.xsd">DocBook v 5.0</a>
+                    </p>
+                    <p>
                         <a href="schema.html?schema=http://www.w3.org/2001/XMLSchema.xsd">XML Schema</a>
                     </p>
                 </div>
